--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,6 +1,6 @@
 .profile {
     width: 300px;
-    margin: 0 auto;
+    margin: 40px auto;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 10px;
